k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spotify-ingress
  namespace: spotify
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - api.spotify.marij.me
    secretName: spotify-tls
  ingressClassName: nginx
  rules:
  - host: api.spotify.marij.me
    http:
      paths:
      - path: /api/user
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 5000
      - path: /api/song
        pathType: Prefix
        backend:
          service:
            name: song-service
            port:
              number: 7000
      - path: /api/admin
        pathType: Prefix
        backend:
          service:
            name: admin-service
            port:
              number: 5001
